# obs-studio-node

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  azure-pipelines.yml  build-bindings.js  build-bindings.ts  build-docs.ts  build-obs.js  build-obs.ts  build_docs.ts  index.d.ts  index.js  index.ts  module.ts  obs_node.d.ts  obs_node.js  obs_node.ts  package.json  pull_request_template.md  tsconfig.json  type_check.ts
CI/: streamlabsp12.pfx.enc
ci/: appveyor-test-runner.ps1  build-osn-osx.sh  build-osn.cmd  bump-version.js  check-format.sh  cmake-build.cmd  configure-osn-osx.sh  configure-osn.cmd  copy-files.cmd  copy-signed-binaries.cmd  deploy-osx.sh  install-dependencies-osx.sh  prepare-artifact.cmd  run-sentry-cli-azure.cmd  run-sentry-cli-azure.ps1  run-sentry-cli.cmd  sentry-osx.py  set-network.ps1  win-signed-build.ps1
cmake/: NodeJS.cmake  cppcheck.cmake  index.ts.in  obs.js.in  version.rc.in
dependency_checker/: README.md  check_dependencies.cmd
distribute/: index.d.ts  index.js  module.d.ts  module.js  type_check.d.ts  type_check.js
js/: index.js  index.ts  module.d.ts  module.js  module.ts  tsconfig.json  type_check.d.ts  type_check.js  type_check.ts
mac/: named-pipe.cpp  named-pipe.hpp
obs-studio-client/: CMakeLists.txt  cppcheck_suppressions_list.txt
obs-studio-client/dependencies/: obs_studio_client.node.txt
obs-studio-client/source/: Audio.cpp  Audio.h  AudioControls.h  Common.cpp  Common.h  IEncoder.h  ISource.cpp  ISource.h  Output.h  Profiny.cpp  Profiny.h  Properties.h  SceneItem.h  Service.h  Transition.cpp  Video.h  advanced-recording.cpp  advanced-recording.hpp  advanced-replay-buffer.cpp  advanced-replay-buffer.hpp  advanced-streaming.cpp  advanced-streaming.hpp  audio-encoder.cpp  audio-encoder.hpp  audio-track.cpp  audio-track.hpp  audio.cpp  audio.hpp  cache-manager.cpp  cache-manager.hpp  callback-manager.cpp  callback-manager.hpp  callback_manager.cpp  callback_manager.hpp  controller.cpp  controller.hpp  controller_js.cpp  data-value.cpp  data-value.hpp  delay.cpp  (+101 more)
obs-studio-client/source/obs-wrapper/: gs-vertex.cpp  gs-vertex.h  memory-manager.h  nodeobs_api-server.cpp  nodeobs_api-server.h  nodeobs_audio_encoders.h  nodeobs_autoconfig-server.cpp  nodeobs_common.cpp  nodeobs_configManager.cpp  nodeobs_content.h  nodeobs_display-server.cpp  nodeobs_display-server.h  nodeobs_service-server.cpp  nodeobs_service-server.h  obs-nodeobs_api.cpp  obs-nodeobs_api.h  obs-nodeobs_autoconfig.cpp  obs-nodeobs_autoconfig.h  obs-nodeobs_display.cpp  obs-nodeobs_service.cpp  obs-nodeobs_service.h  obs-shared.cpp  obs-utility.cpp  osn-calldata.cpp  osn-display.cpp  osn-fader.cpp  osn-fader.hpp  osn-filter.cpp  osn-global.cpp  osn-global.hpp  osn-input.cpp  osn-input.hpp  osn-module.cpp  osn-module.hpp  osn-output.hpp  osn-scene.cpp  osn-scene.hpp  osn-sceneitem.cpp  osn-sceneitem.hpp  osn-source.cpp  (+12 more)
obs-studio-client/source/obspp/: obspp-audio.hpp  obspp-display.cpp  obspp-filter.hpp  obspp-index.hpp  obspp-scene.hpp  obspp-transition.cpp  obspp-transition.hpp  obspp-video.cpp  obspp-view.hpp  obspp-weak.hpp
obs-studio-client/source/server/: callback-manager.cpp  callback-manager.h  gs-limits.h  main.cpp  memory-manager.cpp  nodeobs_api-server.cpp  nodeobs_api-server.h  nodeobs_autoconfig-server.cpp  nodeobs_autoconfig-server.h  nodeobs_common.cpp  nodeobs_configManager.cpp  nodeobs_content.h  nodeobs_display-server.cpp  nodeobs_display-server.h  nodeobs_service-server.cpp  nodeobs_service-server.h  nodeobs_settings-server.cpp  nodeobs_settings-server.h  osn-common.cpp  osn-fader.cpp  osn-fader.hpp  osn-filter.cpp  osn-filter.hpp  osn-global.cpp  osn-global.hpp  osn-iencoder.cpp  osn-input.cpp  osn-input.hpp  osn-module.cpp  osn-module.hpp  osn-properties.cpp  osn-properties.hpp  osn-scene.cpp  osn-scene.hpp  osn-sceneitem.cpp  osn-sceneitem.hpp  osn-source.cpp  osn-source.hpp  osn-transition.cpp  osn-transition.hpp  (+8 more)
obs-studio-server/: CMakeLists.txt  cppcheck_suppressions_list.txt
obs-studio-server/cmake/: ObsPluginHelpers.cmake
obs-studio-server/dependencies/: obs64.exe.txt
obs-studio-server/resources/: roboto.psd
obs-studio-server/source/: MyCPPClass.cpp  MyCPPClass.h  MyObject-C-Interface.h  callback-manager.cpp  callback-manager.h  gs-limits.h  gs-vertex.cpp  gs-vertex.h  gs-vertexbuffer.cpp  gs-vertexbuffer.h  ltalloc.cc  ltalloc.h  mac-display-int.cpp  mac-display-int.h  mac-display-obj-c-int.h  mac-display.h  mac-display.mm  main.cpp  memory-manager.cpp  memory-manager.h  nlohmannjson.hpp  nodeobs_api.cpp  nodeobs_api.cpp~RF48592bdc.TMP  nodeobs_api.cpp~RF485a4952.TMP  nodeobs_api.cpp~RF4ce1bb9e.TMP  nodeobs_api.cpp~RF5233490.TMP  nodeobs_api.h  nodeobs_api.h~RF4ceb2be1.TMP  nodeobs_async.h  nodeobs_audio_encoders.cpp  nodeobs_audio_encoders.h  nodeobs_autoconfig.cpp  nodeobs_autoconfig.h  nodeobs_common.cpp  nodeobs_common.cpp~RF48c522e6.TMP  nodeobs_common.cpp~RF4916d350.TMP  nodeobs_common.cpp~RF49177627.TMP  nodeobs_common.cpp~RF491e64a1.TMP  nodeobs_common.cpp~RF492b13a3.TMP  nodeobs_common.cpp~RF492e47f3.TMP  (+126 more)
obs-studio-server/source/obspp/: obspp-encoder.cpp  obspp-input.cpp  obspp-module.cpp  obspp-module.hpp  obspp-output.cpp  obspp-output.hpp  obspp-properties.cpp  obspp-source.cpp  obspp-source.hpp  obspp-view.cpp  obspp.cpp  obspp.hpp
obs-studio-server/source/old/: AudioControls.cpp  Display.h  ISource.cpp  Input.cpp  Output.cpp  Scene.h  Service.cpp  nodeobs_autoconfig.cpp  nodeobs_display.cpp  nodeobs_event.cpp  nodeobs_module.cpp  nodeobs_service.cpp  nodeobs_service.h
obs-studio-server/source/old/obspp/: obspp-encoder.cpp  obspp-output.hpp  obspp-scene.cpp  obspp-source.hpp  obspp-transition.cpp  obspp-transition.hpp
scripts/: build-bindings.ts  build-obs.ts  tsconfig.json
source/: categories.fbs  error.hpp  obs-property.cpp  obs-property.hpp  osn-error.hpp
src/: .astyle  Async.h  Audio.cpp  Audio.h  AudioControls.cpp  AudioControls.h  Calldata.cpp  Calldata.h  Common.cpp  Common.h  Data.h  Display.h  (+61 more)
(+149 files in other folders)
